Update image loading.